src/app/rm-calculator/rm-calculator.css
.rm-calculation-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.data-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 1rem;
    width: 22rem;
}

.header-container {
    grid-column: span 3; /* Spans all three columns */
    text-align: center;
}

.advanced-settings-list {
    grid-column: span 3;
}

.weight-container, 
.reps-and-intensity-container, 
.weighted-pull-up-container, 
.weighted-pull-up-header-container, 
.bodyweight-and-percentage-container {
    display: contents; /* Utilize the grid directly */
}

.weight-input, 
.reps-input-container, 
.weighted-pull-up-checkbox-container,
.bodyweight-container {
    grid-column: span 2; /* Spans two columns */
}

.weight-units-container, 
.intensity-container, 
.adv-settings-toggle, 
.percentage-container {
    grid-column: span 1; /* Occupies one column */
    display: flex;
    align-items: center; /* need to fix RPE select */
    justify-content: center;
}




.header-container, 
.weight-container, 
.reps-and-intensity-container, 
.weighted-pull-up-container {
    margin-bottom: 1rem;
}

.header-container select {
    font-size: 1.625rem;
    font-weight: 700;
    border: none;
    padding: .5rem .375rem;
}

.data-container input {
    color: black;
    font-size: 1rem;
    padding: 0.375rem 0.75rem;
    font-weight: 500;
    line-height: 1.5;
    border-radius: 5px;
    border: 1px solid lightgray;
}

.weight-units-container .weight-unit {
    display: flex;
    align-items: center;
    color: black;
    font-size: 1rem;
    padding: 0.375rem 0.75rem;
    font-weight: 500;
    line-height: 1.5;
    border: 1px solid lightgray;
}

.left-side-weight-unit {
    border-radius: 5px;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

.right-side-weight-unit {
    border-radius: 5px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
}

.weight-unit input {
    margin-right: .125rem;
}

.intensity-container select {
    border-radius: 5px;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
    color: black;

    font-size: 1rem;
    height: 100%;
    padding-left: 0.24rem;
    padding-right: 0.24rem;
    font-weight: 700;
    line-height: 1.5;
    border: 1px solid lightgray;
}

.intensity-container input {
    border-radius: 5px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    width: 100%;
}

/* WEIGHTED PULL UP/DIP CONTAINER */

.weighted-pull-up-checkbox-container input {
    margin-right: .25rem;
}

.weighted-pull-up-checkbox-container {
    display: flex;
    align-items: center;
    gap: 0.25rem;
}

.adv-settings-toggle {
    display: flex;
    align-items: center;
    cursor: pointer;
    gap: 0.5rem;
    color: rgb(73, 73, 73);
}

.percentage-container input {
    width: 100%;
    text-align: center;
}

.percentage-container {
    display: flex;
    align-items: center;
    gap: 0.5rem;
} 

.advanced-settings-list {
    list-style: none;
}


/* RESULT CONTAINER */
.result-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: .75rem;
}

